Atualização do dia 01 de setembro

--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="projeto.css">
+		<title>Laço Comprido</title>
+	</head>
+
+	<body>
+		<img id="capa" src="capa.jpg">
+			<h1>Laço Comprido</h1>
 
 Site desnvolvido pelos estudantes do 1A: Erica Nascimento, Talina Nascimento e Luciane Barboza (2022) Colégio Estadual João Rysicz.
 
 Laço Comprido
 
-O laço comprido é uma modalidade que visa laçar bois e competir contra outros peões que estejam participando da competição. É um esporte realizado não somente por adultos, mas também por adolescentes que ganham 
-experiência com gado, seja nas comitivas ou nos cuidados feitos com animais nas fazendas.
+<p> laço comprido é uma modalidade que visa laçar bois e competir contra outros peões que estejam participando da competição. É um esporte realizado não somente por adultos, mas também por adolescentes que ganham 
+experiência com gado, seja nas comitivas ou nos cuidados feitos com animais nas fazendas.</p>
 
-O treinamento para o laço comprido é aprender a técnica da distância. Sempre deve ter certeza da distância que possa lançar o laço para que o boi fique preso. No entanto, deve saber que não tem várias tentativas para o acerto. Na primeira, já deve laçar, quando o boi estiver correndo, o laçador observa até onde pode chegar para ser preciso na laçado e mantem o cavalo nessa distância adequada.
+<p> treinamento para o laço comprido é aprender a técnica da distância. Sempre deve ter certeza da distância que possa lançar o laço para que o boi fique preso. No entanto, deve saber que não tem várias tentativas para o acerto. Na primeira, já deve laçar, quando o boi estiver correndo, o laçador observa até onde pode chegar para ser preciso na laçado e mantem o cavalo nessa distância adequada.</p>
 
-É importante evitar que o boi se solte, se isso chegar a acontecer o competidor irá perder pontos, caso ele se livre do laço antes de chegar ao brete. Outra informação é que a armada precisa ser perfeita a fim de evitar penalidades. É necessário que o lçador tenha um bom relacinamento com o cavalo. Pois a prova exige que o conpetidor fique montado no animal e realize movimentos que devem ser treinados.
+<p> É importante evitar que o boi se solte, se isso chegar a acontecer o competidor irá perder pontos, caso ele se livre do laço antes de chegar ao brete. Outra informação é que a armada precisa ser perfeita a fim de evitar penalidades. É necessário que o lçador tenha um bom relacinamento com o cavalo. Pois a prova exige que o conpetidor fique montado no animal e realize movimentos que devem ser treinados.</p>
 
-A prova exige que o competidor permaneça no brete até que o boi saia para o chancha (pista). Os juizes observam com muita atenção, para poder verificar se o cavalo saiu ou não antes do boi, se isso ocorrer, pode haver uma penalização. O laço deve ter de 18 a 20 metros, 
+<p> A prova exige que o competidor permaneça no brete até que o boi saia para o chancha (pista). Os juizes observam com muita atenção, para poder verificar se o cavalo saiu ou não antes do boi, se isso ocorrer, pode haver uma penalização. O laço deve ter de 18 a 20 metros,comforme a categoria que o laçador participa, que pode variar, por exemplo, com a idade e gênero. O ponto alto do laço comprido, é quando o competidor arremessa seu laço antes que o cavalo marque 100 metros na chancha. É necessário que o laçador lace o boi em 30 metros de dintância.</p>
+
+<p> Após laçar o boi, é necessário dar uma volta na pista com o animal. Como foi falado anteriormente, o homem e cavalo tem que ter um bom relacionamento, já que nessa etapa é essencial na conclusão da prova. Se esse aspecto ocorrer tranquilamente, é considerado bandeira branca. Se o boi chegar a remover o laço acima de si, ou se o laçador errar durante o arremesso, a prova será dada como negativa.</p>
+
+<p> As provas oficiais, é normal de ocorrer as fases mata-mata, que classifica aquele que passar em todas as provas para ser o campeão.</p>
+
+Existem três diferentes estilos de modalidades:
+<p> O laço individual:deve ser realizado com o competidor acima do cavalo. É necessário fazer uma laçada em 30s. Após isto, é preciso descer do cavalo para prender o animal em três patas.</p>
+
+<p> laço em dupla:é formada pelo cabeceiro, que precisa ficar do lado esquerdo do brete e laçará a cabeça do boi, e o pezeiro, que deve ficar ficar na direita para prender as patas de trás do bovino. É importante que os cavalos fiquem de frente um para o outro antes de dar a largada. É preciso evitar que saiam antes do boi, caso contrário, eles levarão uma penalização. Nisso é feito uma simulação de um tratamento médico,pois o animal necessita ficar parado a fim de ser examinado.</p>
+
+<p> o laço comprido:Existem grandiosos e extensivos campos verdes no Mato Grosso do Sul,esta prova exige o laço feito até 20 metros, com duas pontas.Uma delas contém uma argola, e a outra uma presilha para auxiliar na captura do animal.È necessário que o competidor aguarde o momento para sair do brete em direção à chancha. Caso o cavalo saia antes, haverá penalidade. Por isso, é fundamental treinar independente da modalidade a ser realizada. </p>
