atualização do dia 8 de setembro

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 	<body>
 		<img id="capa" src="capa.jpg">
+		
 			<h1>Laço Comprido</h1>
 
-Site desnvolvido pelos estudantes do 1A: Erica Nascimento, Talina Nascimento e Luciane Barboza (2022) Colégio Estadual João Rysicz.
+Site desnvolvido pelos estudantes do 1A: Erica Nascimento, Jaine Santos e Luciane Barboza (2022) Colégio Estadual João Rysicz.
 
 Laço Comprido
 
@@ -34,3 +35,4 @@ Existem três diferentes estilos de modalidades:
 <p> laço em dupla:é formada pelo cabeceiro, que precisa ficar do lado esquerdo do brete e laçará a cabeça do boi, e o pezeiro, que deve ficar ficar na direita para prender as patas de trás do bovino. É importante que os cavalos fiquem de frente um para o outro antes de dar a largada. É preciso evitar que saiam antes do boi, caso contrário, eles levarão uma penalização. Nisso é feito uma simulação de um tratamento médico,pois o animal necessita ficar parado a fim de ser examinado.</p>
 
 <p> o laço comprido:Existem grandiosos e extensivos campos verdes no Mato Grosso do Sul,esta prova exige o laço feito até 20 metros, com duas pontas.Uma delas contém uma argola, e a outra uma presilha para auxiliar na captura do animal.È necessário que o competidor aguarde o momento para sair do brete em direção à chancha. Caso o cavalo saia antes, haverá penalidade. Por isso, é fundamental treinar independente da modalidade a ser realizada. </p>
+
