atualização do dia 15 de setembro

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ Site desnvolvido pelos estudantes do 1A: Erica Nascimento, Jaine Santos e Lucian
 
 Laço Comprido
 
-<p> laço comprido é uma modalidade que visa laçar bois e competir contra outros peões que estejam participando da competição. É um esporte realizado não somente por adultos, mas também por adolescentes que ganham 
-experiência com gado, seja nas comitivas ou nos cuidados feitos com animais nas fazendas.</p>
+<p> laço comprido é uma modalidade que visa laçar bois e competir contra outros peões que estejam participando da competição. É um esporte realizado não somente por adultos, mas também por adolescentes que ganham experiência com gado, seja nas comitivas ou nos cuidados feitos com animais nas fazendas.</p>
 
 <p> treinamento para o laço comprido é aprender a técnica da distância. Sempre deve ter certeza da distância que possa lançar o laço para que o boi fique preso. No entanto, deve saber que não tem várias tentativas para o acerto. Na primeira, já deve laçar, quando o boi estiver correndo, o laçador observa até onde pode chegar para ser preciso na laçado e mantem o cavalo nessa distância adequada.</p>
 
