upload do dia 22/09/2022

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="projeto.css">
 		<title>Laço Comprido</title>
 	</head>
 
-	<body>
+    <body>
 		<img id="capa" src="capa.jpg">
 		
 			<h1>Laço Comprido</h1>
@@ -35,3 +36,6 @@ Existem três diferentes estilos de modalidades:
 
 <p> o laço comprido:Existem grandiosos e extensivos campos verdes no Mato Grosso do Sul,esta prova exige o laço feito até 20 metros, com duas pontas.Uma delas contém uma argola, e a outra uma presilha para auxiliar na captura do animal.È necessário que o competidor aguarde o momento para sair do brete em direção à chancha. Caso o cavalo saia antes, haverá penalidade. Por isso, é fundamental treinar independente da modalidade a ser realizada. </p>
 
+ <p> Quem inventou o laço comprido? Certamente,o laço comprido é considerado o esporte da familia na região centro-oeste. No entando,a origem dessa cultura no estado vem da colonização do antigo estado de Mato Grosso,quando ainda não er dividido,teve como base o triânngulo:homem,boi e cavalo.</p>
+
+ 
